--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   convex_bottom_bar: ^3.2.0
   google_fonts: ^4.0.3
+  flutter_staggered_animations: ^1.1.1
 
 #---------------------------------------------------------#
 
