new file:   lib/profile_padding.dart 	new file:   lib/theme/home_screen.dart 	modified:   lib/theme/my_app.dart 	new file:   lib/theme/profile_page.dart 	modified:   pubspec.lock     modified:   pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   convex_bottom_bar: ^3.2.0
   google_fonts: ^4.0.3
   flutter_staggered_animations: ^1.1.1
+  blurrycontainer: ^1.0.2
 
 #---------------------------------------------------------#
 
