--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   blurrycontainer: ^1.0.2
   flutter_slider_drawer: ^2.1.3
+  infinite_scroll_pagination: ^3.2.0
 
 #---------------------------------------------------------#
 
@@ -53,6 +54,9 @@ flutter_icons:
 
 
 flutter:
+
+  assets:
+    - assets/papera.jpg
 
   fonts:
   - family: Lobster 
