--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   blurrycontainer: ^1.0.2
   flutter_slider_drawer: ^2.1.3
   infinite_scroll_pagination: ^3.2.0
+  line_awesome_flutter: ^2.0.0
 
 #---------------------------------------------------------#
 
