--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 #---------------------------------------------------------#
 
 name: dik
-description: un nuovo progetto di app-development
+description: nuovo progetto di app-development
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
@@ -34,7 +34,7 @@ dev_dependencies:
     sdk: flutter
 
   # serve a mettere l'icona dell'app
-  flutter_launcher_icons: ^0.11.0
+  flutter_launcher_icons: ^0.12.0
 
   flutter_lints: ^2.0.0
 
