deleted:    README.md 	modified:   android/app/src/main/res/mipmap-hdpi/ic_launcher.png 	modified:   android/app/src/main/res/mipmap-mdpi/ic_launcher.png 	modified:   android/app/src/main/res/mipmap-xhdpi/ic_launcher.png 	modified:   android/app/src/main/res/mipmap-xxhdpi/ic_launcher.png 	modified:   android/app/src/main/res/mipmap-xxxhdpi/ic_launcher.png 	new file:   assets/fonts/Gelion Bold.ttf 	new file:   assets/fonts/Gelion Medium.ttf 	new file:   assets/icona v1.png 	new file:   assets/immagine di profilo.jpg 	new file:   flutter_launcher_icons.yaml 	modified:   ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-1024x1024@1x.png 	modified:   ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-20x20@1x.png 	modified:   ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-20x20@2x.png 	modified:   ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-20x20@3x.png 	modified:   ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-29x29@1x.png 	modified:   ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-29x29@2x.png 	modified:   ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-29x29@3x.png 	modified:   ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-40x40@1x.png 	modified:   ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-40x40@2x.png 	modified:   ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-40x40@3x.png 	new file:   ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-50x50@1x.png 	new file:   ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-50x50@2x.png 	new file:   ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-57x57@1x.png 	new file:   ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-57x57@2x.png 	modified:   ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-60x60@2x.png 	modified:   ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-60x60@3x.png 	new file:   ios/Runner/Assets.xcassets/AppIcon.appiconset/Icon-App-72x72@1x.png 	new file:   ios/Runner/Assets.xcassets/AppIcon.appiconse

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,16 +39,7 @@ dev_dependencies:
 
   flutter_lints: ^2.0.0
 
-# guarda qui per saperne di più https://dart.dev/tools/pub/pubspec
-
-#---------------------------------------------------------#
-
-# setta il percorso dell'icona, per ora funziona solo per ios perchè android è da sistemare
-
-flutter_icons:
-  ios: true
-  android: true
-  image_path: "assets/Icona palla da discoteca-02.png"
+# guarda qui per saperne di più https://dart.dev/tools/pub/pubspecß
 
 #---------------------------------------------------------#
 
@@ -59,6 +50,7 @@ flutter:
 
   assets:
     - assets/papera.jpg
+    - assets/immagine di profilo.jpg
     - assets/esempio.jpg
     - assets/bar.jpg
 
@@ -66,6 +58,12 @@ flutter:
   - family: Lobster 
     fonts:
     - asset: assets/google_fonts/Lobster-Regular.ttf
+  - family: Gelion Bold
+    fonts:
+    - asset: assets/fonts/Gelion Bold.ttf
+  - family: Gelion Medium
+    fonts:
+    - asset: assets/fonts/Gelion Medium.ttf
 
   # questa linea inserisce il design di alcune classi di Icone come il "+" della versione base 
   uses-material-design: true
