modified:   lib/theme/Main Interface/bottom_bar.dart 	modified:   lib/theme/Main Interface/search_screen.dart 	modified:   lib/theme/Profile/profile_editing_page.dart 	modified:   lib/theme/Profile/profile_page.dart 	modified:   lib/theme/colors.dart 	modified:   pubspec.lock 	modified:   pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   infinite_scroll_pagination: ^3.2.0
   line_awesome_flutter: ^2.0.0
   infinite_scroll: ^1.1.1
+  paginated_search_bar: ^1.1.2
 
 #---------------------------------------------------------#
 
