new file:   .vs/CMakeWorkspaceSettings.json 	new file:   .vs/Dik Repo/FileContentIndex/15dbbfd3-d3c7-4a31-94d5-4c98c573937c.vsidx 	new file:   .vs/Dik Repo/FileContentIndex/read.lock 	new file:   .vs/Dik Repo/v17/.wsuo 	new file:   .vs/Dik Repo/v17/Browse.VC.db 	new file:   .vs/ProjectSettings.json 	new file:   .vs/VSWorkspaceState.json 	new file:   .vs/slnx.sqlite 	modified:   android/build.gradle 	modified:   lib/theme/Main Interface/bottom_bar.dart 	modified:   lib/theme/Main Interface/home_screen.dart 	modified:   lib/theme/Main Interface/search_screen.dart 	modified:   lib/theme/colors.dart 	modified:   pubspec.lock 	modified:   pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   line_awesome_flutter: ^2.0.0
   infinite_scroll: ^1.1.1
   paginated_search_bar: ^1.1.2
+  animations: ^2.0.7
 
 #---------------------------------------------------------#
 
