--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,11 @@ dependencies:
   infinite_scroll: ^1.1.1
   paginated_search_bar: ^1.1.2
   animations: ^2.0.7
+  image_picker: ^0.8.9
+  image_cropper: ^5.0.0
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  
 
 #---------------------------------------------------------#
 
@@ -37,7 +42,7 @@ dev_dependencies:
     sdk: flutter
 
   # serve a mettere l'icona dell'app
-  flutter_launcher_icons: ^0.12.0
+  flutter_launcher_icons: "^0.13.1"
 
   flutter_lints: ^2.0.0
 
@@ -46,6 +51,24 @@ dev_dependencies:
 #---------------------------------------------------------#
 
 # Flutter packages
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icona v2.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/icona v2.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/icona v2.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/icona v2.png"
 
 
 flutter:
