--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   image_cropper: ^5.0.0
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
+  flutter_svg: ^2.0.7
   
 
 #---------------------------------------------------------#
@@ -75,6 +76,8 @@ flutter:
   assets:
     - assets/papera.jpg
     - assets/immagine di profilo.jpg
+    - assets/icons/
+    - assets/icons/Tonight_1.svg
 
   fonts:
   - family: Lobster 
