--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   flutter_svg: ^2.0.7
+  image: ^4.0.17
   
 
 #---------------------------------------------------------#
