--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -17,11 +17,7 @@ jobs:
 
     steps:
       - name: Setup Flutter ${{ matrix.flutter-version }}
-        id: flutter
-        if: "!startsWith(matrix.bot, 'dart')"
-        uses: DanTup/gh-actions/setup-flutter@master
-        with:
-          channel: ${{ matrix.flutter-version }}    
+        uses: DanTup/gh-actions/setup-flutter@main
       - uses: actions/checkout@v3
 
       # Note: This workflow uses the latest stable version of the Dart SDK.
