--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -18,6 +18,7 @@ jobs:
     steps:
       - name: Setup Flutter ${{ matrix.flutter-version }}
         uses: DanTup/gh-actions/setup-flutter@master
+        
       - uses: actions/checkout@v3
 
       # Note: This workflow uses the latest stable version of the Dart SDK.
@@ -34,8 +35,8 @@ jobs:
       #   run: dart format --output=none --set-exit-if-changed .
 
       # Consider passing '--fatal-infos' for slightly stricter analysis.
-      - name: Analyze project source
-        run: dart analyze
+      # - name: Analyze project source
+      #   run: dart analyze
 
       # Your project will need to have tests in test/ and a dependency on
       # package:test for this step to succeed. Note that Flutter projects will
