--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -19,7 +19,7 @@ jobs:
       - name: Setup Flutter ${{ matrix.flutter-version }}
         uses: DanTup/gh-actions/setup-flutter@master
         
-      # - uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       # Note: This workflow uses the latest stable version of the Dart SDK.
       # You can specify other versions if desired, see documentation here:
