modified:   assets/icons/home.svg 	new file:   assets/prova1.jpg 	modified:   lib/theme/Main Interface/Screens/Home Page/home_screen.dart 	modified:   lib/theme/Main Interface/Screens/Home Page/selected_page.dart 	modified:   lib/theme/Main Interface/appbar.dart 	modified:   lib/theme/icons.dart 	modified:   lib/theme/my_app.dart 	modified:   pubspec.lock 	modified:   pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   equatable: ^2.0.5
   flutter_svg: ^2.0.7
   image: ^4.0.17
+  palette_generator: ^0.3.3+2
   
 
 #---------------------------------------------------------#
@@ -77,6 +78,7 @@ flutter:
   assets:
     - assets/papera.jpg
     - assets/immagine di profilo.jpg
+    - assets/prova1.jpg
     - assets/icons/
 
   fonts:
