--- a/ios/firebase_app_id_file.json
+++ b/ios/firebase_app_id_file.json
@@ -1,7 +1,7 @@
 {
   "file_generated_by": "FlutterFire CLI",
   "purpose": "FirebaseAppID & ProjectID for this Firebase app in this directory",
-  "GOOGLE_APP_ID": "1:133433635467:ios:f071025aabefdd1c33da8e",
-  "FIREBASE_PROJECT_ID": "dik-project",
-  "GCM_SENDER_ID": "133433635467"
+  "GOOGLE_APP_ID": "1:43969926316:ios:8d8030845baeecb69afb09",
+  "FIREBASE_PROJECT_ID": "dikorp-393116",
+  "GCM_SENDER_ID": "43969926316"
 }
