--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,4 +1,10 @@
 buildscript {
+    repositories {
+      // Make sure that you have the following two repositories
+      google()  // Google's Maven repository
+      mavenCentral()  // Maven Central repository
+    }
+
     ext.kotlin_version = '1.7.10'
     repositories {
         google()
