new file:   assets/icons/appendiabiti.svg 	new file:   assets/icons/trattore.svg 	new file:   assets/prova2.jpg 	modified:   lib/theme/Main Interface/Profile/Profile Pages/cart_page.dart 	modified:   lib/theme/Main Interface/Profile/Profile Pages/info_page.dart 	modified:   lib/theme/Main Interface/Profile/Profile Pages/privacy_page.dart 	modified:   lib/theme/Main Interface/Profile/Profile Pages/settings_page.dart 	modified:   lib/theme/Main Interface/Profile/Profile Pages/tickets_page.dart 	modified:   lib/theme/Main Interface/Profile/profile_page.dart 	modified:   lib/theme/Main Interface/Profile/profile_picture_editing_page.dart 	modified:   lib/theme/Main Interface/Screens/Home Page/home_screen.dart 	modified:   lib/theme/Main Interface/Screens/Home Page/selected_page.dart 	modified:   lib/theme/Main Interface/Screens/calendar_screen.dart 	modified:   lib/theme/Main Interface/Screens/map_screen.dart 	modified:   lib/theme/Main Interface/Screens/saved_screen.dart 	modified:   lib/theme/Main Interface/Screens/search_screen.dart 	modified:   lib/theme/Main Interface/appbar.dart 	modified:   lib/theme/Main Interface/bottom_bar.dart 	new file:   lib/theme/Main Interface/bottombar.dart 	new file:   lib/theme/Main Interface/main_interface.dart 	modified:   lib/theme/Main Interface/notifications_page.dart 	modified:   lib/theme/colors.dart 	modified:   lib/theme/events_examples.dart 	modified:   lib/theme/icons.dart 	modified:   lib/theme/my_app.dart 	modified:   pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ flutter:
     - assets/papera.jpg
     - assets/immagine di profilo.jpg
     - assets/prova1.jpg
+    - assets/prova2.jpg
     - assets/icons/
 
   fonts:
