--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_svg: ^2.0.7
   image: ^4.0.17
   palette_generator: ^0.3.3+2
+  flutter_swipe_detector: ^2.0.0
   
 
 #---------------------------------------------------------#
