--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   image: ^4.0.17
   palette_generator: ^0.3.3+2
   flutter_swipe_detector: ^2.0.0
+  cloud_firestore: ^4.9.1
+  firebase_core: ^2.15.1
   
 
 #---------------------------------------------------------#
