--- a/android/build.gradle
+++ b/android/build.gradle
@@ -9,7 +9,6 @@ buildscript {
         classpath 'com.android.tools.build:gradle:7.2.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.3.15'
-        
     }
 }
 
@@ -32,3 +31,6 @@ tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
 
+/*plugins{
+   id 'com.google.gms.google-services' version '4.3.15' apply false
+}*/ 
