--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   equatable: ^2.0.5
   flutter_svg: ^2.0.7
   image: ^4.0.17
+  intl: ^0.18.1
   
 
 #---------------------------------------------------------#
