Implementazione caricamento foto profilo (in locale) attraverso galleria e fotocamera

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,13 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>Photo Library Usage</string>
+		<key>NSCameraUsageDescription</key>
+		<string>Camera Usage</string>
+		<key>NSMicrophoneUsageDescription </key>
+		<string>Microphone Usage</string>
+
+
 </dict>
 </plist>
