--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,20 +59,20 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icona v2.png"
-  min_sdk_android: 21 # android min sdk min:16, default 21
+  image_path: "assets/new_icon.png"
+  #min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "assets/icona v2.png"
+    image_path: "assets/new_icon.png"
     background_color: "#hexcode"
     theme_color: "#hexcode"
   windows:
     generate: true
-    image_path: "assets/icona v2.png"
+    image_path: "assets/new_icon.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: "assets/icona v2.png"
+    image_path: "assets/new_icon.jpg"
 
 #---------------------------------------------------------#
 
