aggiunto possibilita' di inserire data e orario

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_swipe_detector: ^2.0.0
   cloud_firestore: ^4.9.1
   firebase_core: ^2.15.1
+  interval_time_picker: ^2.0.0+5
   
 
 #---------------------------------------------------------#
