modified:   lib/main.dart 	modified:   lib/theme/App/Profile/ProfilePages/add_event_page.dart 	modified:   lib/theme/App/Profile/profile_page.dart 	modified:   lib/theme/App/Screens/HomeScreen/home_screen.dart 	modified:   lib/theme/Widgets/category_frame_item.dart 	modified:   pubspec.lock 	modified:   pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.9.1
   firebase_core: ^2.15.1
   interval_time_picker: ^2.0.0+5
+  flutter_spinkit: ^5.2.0
   
 
 #---------------------------------------------------------#
