modified:   .vscode/settings.json 	new file:   assets/concerto.jpeg 	modified:   lib/main.dart 	modified:   lib/theme/App/Profile/profile_picture_editing_page.dart 	modified:   lib/theme/App/Screens/HomeScreen/home_screen.dart 	new file:   lib/theme/App/Screens/HomeScreen/host_page.dart 	modified:   lib/theme/App/Screens/HomeScreen/selected_page.dart 	modified:   lib/theme/App/Screens/SavedScreen/saved_screen.dart 	modified:   lib/theme/App/main_interface.dart 	modified:   lib/theme/DatabaseSamples/events_examples.dart 	renamed:    lib/theme/Widgets/hype_button.dart -> lib/theme/Widgets/Buttons/hype_button.dart 	new file:   lib/theme/Widgets/Buttons/profile_button.dart 	modified:   lib/theme/Widgets/appbar.dart 	modified:   lib/theme/Widgets/bottombar.dart 	new file:   lib/theme/Widgets/compact_event_frame.dart 	modified:   lib/theme/Widgets/event_frame.dart 	modified:   lib/theme/my_app.dart 	modified:   pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ flutter:
     - assets/prova3.jpg
     - assets/prova4.png
     - assets/black.jpg
+    - assets/concerto.jpeg
     - assets/icons/
 
   fonts:
